# prompt-cache-warmer

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt
results/_style/: repo.mplstyle
src/pcw/: __init__.py  runner.py  types.py
src/pcw/bench/: run.py
src/pcw/cli/: main.py
src/pcw/trie/: prefix.py
src/pcw/viz/: charts.py
src/pcw/workload/: generator.py
tests/: test_bench.py  test_runner.py  test_trie.py  test_workload.py
